[th2-4500] Added test for starting processing